--- a/src/styles/encryptedMsg.css
+++ b/src/styles/encryptedMsg.css
@@ -9,7 +9,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  max-width: 600px; 
+  max-width: 600px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
 }
 
 .enc-msg-div {
